apps/scolx/middleware-security-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: scolx
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    stsSeconds: 63072000
    stsIncludeSubdomains: true
    stsPreload: true
    referrerPolicy: "no-referrer-when-downgrade"
    contentSecurityPolicy: "default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self' https://s3.scolx.com; worker-src 'self' blob:; frame-ancestors 'self'; object-src 'none'; base-uri 'self'"
    permissionsPolicy: "geolocation=(), microphone=(), camera=(), fullscreen=()"
