apps/scolx/namespace.yaml
# Namespace for Scolx
apiVersion: v1
kind: Namespace
metadata:
  name: scolx
  labels:
    name: scolx
