apps/scolx/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scolx-frontend
  namespace: scolx
  labels:
    app: scolx-frontend
spec:
  selector:
    matchLabels:
      app: scolx-frontend
  template:
    metadata:
      labels:
        app: scolx-frontend
    spec:
      imagePullSecrets:
        - name: scolx-registry
      containers:
        - name: scolx-frontend
          image: registry.cherkaoui.ch/scolx/scolx/frontend:latest
          ports:
            - containerPort: 3000
              name: main
