apps/scolx/deploy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scolx-server
  namespace: scolx
  labels:
    app: scolx-server
spec:
  replicas: 0
  selector:
    matchLabels:
      app: scolx-server
  template:
    metadata:
      labels:
        app: scolx-server
    spec:
      imagePullSecrets:
        - name: scolx-registry
      containers:
        - name: scolx-server
          image: registry.cherkaoui.ch/scolx/scolx-v2/server:latest
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            httpGet:
              path: /livez
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /startupz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30
