apps/scolx/svc-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: scolx-server
  namespace: scolx
  labels:
    app.kubernetes.io/name: scolx-server
    app.kubernetes.io/instance: scolx-server
spec:
  selector:
    app: scolx-server
  type: ClusterIP
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      protocol: TCP
