apps/scolx/ingress-rustfs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustfs
  namespace: scolx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.scolx.com`) && PathPrefix(`/`)
      kind: Rule
      priority: 100
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: rustfs-svc
          port: endpoint
  tls:
    certResolver: letsencrypt
